--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
   },
   "homepage": "https://github.com/SosnovichIvan/PoleHackathon#readme",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
+    "@types/react-redux": "^7.1.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1"
   },
