--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack serve --env port=3000",
-    "build:prod": "webpack --env mode=production",
-    "build:dev": "webpack --env mode=development"
+    "start": "cross-env MODE=development webpack serve",
+    "build:prod": "cross-env MODE=production webpack",
+    "build:dev": "cross-env MODE=development webpack"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,9 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "@types/react-redux": "^7.1.24",
+    "axios": "^1.1.2",
+    "install": "^0.13.0",
+    "npm": "^8.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
@@ -30,6 +33,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@types/dotenv-webpack": "^7.0.3",
     "@types/node": "^18.8.5",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
