--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/SosnovichIvan/PoleHackathon#readme",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@reduxjs/toolkit": "^1.8.6",
     "@types/react-redux": "^7.1.24",
+    "antd": "^4.23.5",
     "axios": "^1.1.2",
     "install": "^0.13.0",
     "npm": "^8.19.2",
@@ -33,6 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@types/antd": "^1.0.0",
     "@types/dotenv-webpack": "^7.0.3",
     "@types/node": "^18.8.5",
     "@types/react": "^18.0.21",
